--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-08-08 14:27:44
+lastsearch = 2024-08-08 15:16:17
 
 [demxanh.com]
 match = -42.9%%
@@ -12,9 +12,9 @@ title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 09
 url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-09.html
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Bộ ga chun chần WarmDream 180x200 HQ - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-chun-chan-warmdream-180x200-hq.html
+match = 35.7%%
+title = Ga chun EPCARLESS 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
