--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-08-08 13:23:35
+lastsearch = 2024-08-08 17:59:42
 
 [everon.online]
 match = -55.6%%
@@ -17,9 +17,9 @@ title = Bộ Chăn Ga Everon Est-21039 màu xanh chất liệu gỗ tổng ...
 url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039
 
 [tongdailyeveron.com.vn]
-match = 29.6%%
-title = Bộ ga phủ 180*200 EPM 20069
-url = https://tongdailyeveron.com.vn/products/bo-ga-phu-180-200-epm20069
+match = -5.3%%
+title = Bộ Chăn Ga Giảm Giá
+url = https://tongdailyeveron.com.vn/collections/bo-chan-ga-giam-gia
 
 [demxanh.com]
 match = -7.4%%
@@ -38,13 +38,13 @@ url = https://everonhn.com.vn/bo-chan-ga-everon-epm-21069
 
 [everon.net.vn]
 match = 10.5%%
-title = Bộ Everon Epm-21071
-url = https://everon.net.vn/everon/2130/bo-everon-epm-21071
+title = Bộ Everon Epm-21070
+url = https://everon.net.vn/everon/2131/bo-everon-epm-21070
 
 [sieuthidemhanquoc.com.vn]
-match = 22.2%%
-title = Bộ chăn ga gối Everon EPM-21060
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21060-1523
+match = 18.5%%
+title = Bộ chăn ga gối Everon EPT-21045
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-ept-21045-1527
 
 [shopee.vn]
 match = -70.4%%
