--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-08 16:51:44
+lastsearch = 2024-08-08 17:52:08
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -14,7 +14,7 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
 [foreverbedding.net]
 match = -33.3%%
 title = Bộ ga chun Velina V18 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v18?srsltid=AfmBOorW8BOoetjjw0RC8DzrMAmhedd852_Pg1TWGJoC6rY68Dsu4umT
+url = https://foreverbedding.net/bo-ga-chun-velina-v18
 
 [shopee.vn]
 match = -114.3%%
@@ -39,7 +39,7 @@ url = https://songhong.info/chan-ga-goi-uc020
 [www.diepxuan.com]
 match = -9.5%%
 title = Bộ chun xoa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-xoa-180x200.html?srsltid=AfmBOooamBIshmq-dDg9CwiQbR5Mbpp0Alxi3tBfER_T737lYYBkmD4y
+url = https://www.diepxuan.com/bo-chun-xoa-180x200.html
 
 [hoangkimhome.com]
 match = -90.5%%
@@ -59,7 +59,7 @@ url = https://m.enbac.com/?page=list&province_id=ha-noi&cate_alias=&category_id=
 [demxanh.com]
 match = -52.4%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 18
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-18.html?srsltid=AfmBOoocmVDRk-Qe5HvErjgDFXWZpk2lwPqmcXnRK6pUik5yHUuCVYsp
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-18.html
 
 [dongahome.vn]
 match = -57.1%%
