--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-08-08 14:46:57
+lastsearch = 2024-08-08 17:57:15
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -152,8 +152,8 @@ title = PowerFlex 750-Series AC Drives Reference Manual
 url = https://literature.rockwellautomation.com/idc/groups/literature/documents/rm/750-rm002_-en-p.pdf
 
 [som.cuanschutz.edu]
-match = -150.0%%
-title = D. Ross Camidge, MD, PhD - School of Medicine - CU Anschutz
+match = -85.0%%
+title = D. Ross Camidge, MD, PhD - School of Medicine
 url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
 
 [vc2040.org]
@@ -172,9 +172,9 @@ title = EPA's Reanalysis of Key Issues Related to Dioxin Toxicity and ...
 url = https://cfpub.epa.gov/ncea/iris/iris_documents/documents/supdocs/dioxinv1sup.pdf
 
 [cps-vo.org]
-match = -150.0%%
-title = *** 276 Total Attendees (listed in green) *** | Cyber- ...
-url = https://cps-vo.org/group/cpspimtg24/registrants-attendees
+match = -140.0%%
+title = Registrants | Cyber-Physical Systems Virtual Organization
+url = https://cps-vo.org/group/satc-pimtg22/registrants
 
 [backend.daikincomfort.com]
 match = -28.6%%
@@ -363,8 +363,8 @@ url = https://www.ipcc.ch/report/ar6/wg3/chapter/chapter-5/
 
 [pubs.acs.org]
 match = -145.0%%
-title = Observational Insights into Aerosol Formation from Isoprene
-url = https://pubs.acs.org/doi/10.1021/es4011064
+title = Applications of Palladium-Catalyzed C–N Cross-Coupling ...
+url = https://pubs.acs.org/doi/10.1021/acs.chemrev.6b00512
 
 [www.odu.edu]
 match = 5.0%%
