--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-08-08 18:39:00
+lastsearch = 2024-08-08 23:50:37
 
 [demxanh.com]
 match = 13.8%%
@@ -27,9 +27,9 @@ title = Bộ Chăn Ga Gối Lụa Tencel (Pyeoda Sky Silk) - Nệm Cao Su
 url = https://changagoinemgiasi.com/san-pham/bo-chan-ga-goi-lua-tencel-pyeoda-sky-silk/
 
 [shopee.vn]
-match = 65.5%%
-title = GA LỤA CAO CẤP PYEODA SKY SILK
-url = https://shopee.vn/GA-LỤA-CAO-CẤP-PYEODA-SKY-SILK-i.10780049.10305032268
+match = -27.6%%
+title = Bộ chăn ga vỏ gối lụa 5 món Skysilk hàng Pyeoda cao cấp ...
+url = https://shopee.vn/Bộ-chăn-ga-vỏ-gối-lụa-5-món-Skysilk-hàng-Pyeoda-cao-cấp-có-túi-đựng-i.60303676.20559202272
 
 [thegioidemonline.com]
 match = 34.5%%
