--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-08 22:28:03
+lastsearch = 2024-08-08 23:46:08
 
 [www.diepxuan.com]
 match = 4.5%%
@@ -52,9 +52,9 @@ title = Chiếu cao su non Coco bo chun màu xám nhạt
 url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xam-nhat.html
 
 [www.tiktok.com]
-match = -9.1%%
-title = [SET 3 MÓN] GA GỐI NỈ NHUNG CoCo Nhập Khẩu
-url = https://www.tiktok.com/@vebo1912plp/video/7364029858747256081
+match = -59.1%%
+title = Ga gối coco nằm điều hoà mát rễ chịu#coco #gagoi
+url = https://www.tiktok.com/@decor6223/video/7365936323837906177
 
 [thegioidemviet.vn]
 match = -122.7%%
