--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-08-08 22:18:38
+lastsearch = 2024-08-08 23:54:05
 
 [chieutruc.info]
 match = -60.0%%
@@ -13,8 +13,8 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [demxanh.com]
 match = -28.0%%
-title = Bảng giá chiếu trúc Cao Bằng Cao Sơn mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html?srsltid=AfmBOoqd0HDXQhE2fdWVst3TZZkCgMco2gNVIdngIWMaGI7VnzlL_P7s
+title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
 
 [shopee.vn]
 match = -64.0%%
@@ -69,7 +69,7 @@ url = https://antv.gov.vn/phap-luat-3/cong-an-cao-bang-bat-doi-tuong-lua-dao-hon
 [www.diepxuan.com]
 match = 32.0%%
 title = Chiếu cây Cao Bằng lụa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-180x200.html?srsltid=AfmBOoqUEpVGfKz8UTCzCsTk18Ff1gjnn4EYBcdDjOtOICmY48nqMqR1
+url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-180x200.html
 
 [olm.vn]
 match = -80.0%%
