--- a/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x400.html
 lastopen = 2024-06-07 00:22:51
 
 [search]
-lastsearch = 2024-08-08 21:36:22
+lastsearch = 2024-08-08 23:53:44
 
 [www.diepxuan.com]
 match = 42.4%%
 title = Chiếu nhựa Hà Nội GT 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-gt-180x200.html
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-gt-180x200.html?srsltid=AfmBOopDwclAligIs3JkPndUATBu4e8D1SlUhkZuHaZ1N3d34JSKr8I5
 
 [shopee.vn]
 match = 9.1%%
