--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-08-08 23:22:07
+lastsearch = 2024-08-09 00:02:01
 
 [shopee.vn]
 match = -17.4%%
@@ -17,9 +17,9 @@ title = Chiếu Nhựa Thái Bình | Thanh Hóa
 url = https://www.facebook.com/chieunhuathaibinh/?locale=vi_VN
 
 [www.sendo.vn]
-match = -69.6%%
-title = Chiếu Cói Thái Bình Siêu Tốt, Giá Gốc, Thanh Toán Khi ...
-url = https://www.sendo.vn/chieu-coi-thai-binh.htm
+match = -65.2%%
+title = chiếu nhựa thái bình tiện dụng (đủ mọi kích thước) - hot49w
+url = https://www.sendo.vn/chieu-nhua-thai-binh-tien-dung-du-moi-kich-thuoc-116416515.html
 
 [trangvangvietnam.com]
 match = 21.7%%
@@ -39,7 +39,7 @@ url = https://thaibinhtv.vn/news/0/61643/san-xuat-theo-chieu-huong-hien-dai-quy-
 [www.lazada.vn]
 match = -17.4%%
 title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
-url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html?srsltid=AfmBOoqOtOOC1y6Rfy8X4uUOYNckcB4S4TccGUSjhonnHdW0n1Prq03m
+url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html?srsltid=AfmBOor11INh_5RTxFfMK6CTbjGLXWll-dOxqsAa0KLpcRd_rLA4ksr8
 
 [chuyenhangviet.com]
 match = -82.6%%
@@ -64,7 +64,7 @@ url = https://demhong.vn/chieu-tre-viet-pho-men/
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu nhựa Thái Bình 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html?srsltid=AfmBOooB045_wcRHX2_w3jAwxUZVlx0TaL-nLJQVC5E4vZlZgtnVfGyb
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html?srsltid=AfmBOopuqq4Z7LvhimvTKlwAB-g1lA0MY3UuoXHDK_dQSeFnx9t1Xjxl
 
 [h5.lazada.vn]
 match = 34.8%%
