--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-08-08 21:46:26
+lastsearch = 2024-08-08 23:50:58
 
 [www.bible.com]
-match = -135.7%%
-title = JOHANA 16 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/JHN.16.MIZCLBSI
+match = -128.6%%
+title = MARKA 16 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/MRK.16.MIZCLBSI
 
 [tiki.vn]
 match = -171.4%%
@@ -185,4 +185,9 @@ url = https://brenontheroad.com/travellers-guide-new-zealand-slang/
 match = 0.0%%
 title = Home | Parker US
 url = https://www.parker.com/us/en/home.html
+
+[events.stanford.edu]
+match = -121.4%%
+title = Events Calendar - Stanford University
+url = https://events.stanford.edu/
 
