--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-08 20:36:56
+lastsearch = 2024-08-09 00:01:21
 
 [www.everonvn.vn]
 match = -105.0%%
@@ -33,7 +33,7 @@ url = https://suongtuyet.com/nem-bong-ep-everon
 
 [demxanh.com]
 match = -110.0%%
-title = Bảng giá đệm bông ép Everhome khuyến mãi mới nhất 2024
+title = Bảng giá đệm bông ép Everhome khuyến mãi mới nhất ...
 url = https://demxanh.com/bang-gia-dem-bong-ep-everhome-nam-2023.html
 
 [everon365.vn]
