--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-08-08 16:59:24
+lastsearch = 2024-08-08 23:59:17
 
 [www.diepxuan.com]
 match = 5.9%%
 title = Điệp Xuân Ruột gối kê Korea 45x65
-url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html?srsltid=AfmBOopiXRAJOyy3Yf1l3PUke7PiZfK_OoF5sF6kOzsmN-30uWiF_5tI
+url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html?srsltid=AfmBOophkDt70N3j2o8RtYk8HxdIF6calvIJ8q9GVfsTgUioNZpiK2gv
 
 [entershopping.vn]
 match = -123.5%%
@@ -17,19 +17,19 @@ title = Ruột gối ép Hàn Quốc Korea , ruot-goi-ep-han-quoc-korea
 url = https://entershopping.vn/ruot-goi-ep-han-quoc-korea.html
 
 [www.detmaykimthanh.com]
-match = 52.9%%
-title = Ruột gối Standard
-url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-129.html
+match = 5.9%%
+title = Ruột gối Microfiber Korea Virgin
+url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-131.html
 
 [shopee.vn]
-match = -58.8%%
-title = Đôi Ruột Gối Bông Hạt Korea Ép Hơi 50*70cm
-url = https://shopee.vn/🌱-Đôi-Ruột-Gối-Bông-Hạt-Korea-Ép-Hơi-50*70cm-i.125787394.5970171584
+match = 58.8%%
+title = ruột gối hơi hiệu KOREA
+url = https://shopee.vn/ruột-gối-hơi-hiệu-KOREA-i.43470238.725470536
 
 [demxanh.com]
 match = -100.0%%
 title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html?srsltid=AfmBOopLnaif6pVbLSfFWJjbfQMxJ4wTiB4EAfE6PPWfwllQNM3knfoF
+url = https://demxanh.com/ruot-goi.html?srsltid=AfmBOooDQmLtj0TnzPD24-zxKWK5ppm0r0Semy-SyC-yoWz0VyTE1Bby
 
 [everonkorea.com]
 match = -100.0%%
@@ -49,12 +49,12 @@ url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 [www.lazada.vn]
 match = -147.1%%
 title = Gối Ngủ MOSAM KOREA (Ruột Kèm Vỏ Gối) 35x55 cm có ...
-url = https://www.lazada.vn/products/goi-ngu-mosam-korea-ruot-kem-vo-goi-35x55-cm-co-khoa-keo-phu-hop-cho-be-di-hoc-nguoi-di-cong-trinhsinh-vien-i2334711515.html?srsltid=AfmBOorpsS0Ozb7B-98fJev7x2llwjzRhg8Ul3DaklMSfelXRXyAOqtF
+url = https://www.lazada.vn/products/goi-ngu-mosam-korea-ruot-kem-vo-goi-35x55-cm-co-khoa-keo-phu-hop-cho-be-di-hoc-nguoi-di-cong-trinhsinh-vien-i2334711515.html?srsltid=AfmBOor7aWq0dDGgKxFcOdzQo5TLuQgUH--wQpxeg26o941EdnYgmCIX
 
 [www.hotdeal.vn]
 match = -111.8%%
 title = Combo 2 Ruột Gối Bông Ép Korea Hút Chân Không Hà Nội
-url = https://www.hotdeal.vn/ha-noi/nha-cua-doi-song/combo-2-ruot-goi-bong-ep-korea-hut-chan-khong-174420.html?srsltid=AfmBOoqj0a8Bgr9qUCGGeKxO7CntbVRRHkpybGw5ZIKWC7fjVQUjXatV
+url = https://www.hotdeal.vn/ha-noi/nha-cua-doi-song/combo-2-ruot-goi-bong-ep-korea-hut-chan-khong-174420.html?srsltid=AfmBOorgOLc5P30m_C0kE5slFexlenyQ0wqVzunyBHyzPCoAr2xmZ_Mt
 
 [dienmaytinphong.com]
 match = -70.6%%
