--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-08 22:23:09
+lastsearch = 2024-08-08 23:52:43
 
 [en.wikipedia.org]
 match = 8.7%%
@@ -92,9 +92,9 @@ title = 1968 Annual Supplement - Page 1252 - Google Books Result
 url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+14+19&source=bl&ots=P-88eZiahc&sig=ACfU3U1OKKy7su1PXp6GrPJTYIpXi8G8Qw&hl=en&sa=X&ved=2ahUKEwjvs9WGqs2HAxUJrYkEHSL2C14Q6AF6BAgqEAM
 
 [30rates.com]
-match = -104.3%%
-title = Gold Price Prediction For Tomorrow, This Week And Month.
-url = https://30rates.com/gold-price-forecast-and-predictions
+match = -60.9%%
+title = SOLANA PRICE PREDICTION TOMORROW, WEEK AND ...
+url = https://30rates.com/solana
 
 [www.ncbi.nlm.nih.gov]
 match = -95.7%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/7/19/on-north-koreas-tense-border-swis
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=f2410e6d5c2185d0&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwis2K_V2eWHAxXSAHkGHb31B9wQsZYEegQIIhAC
+url = https://www.google.com/search?sca_esv=f34a7ccbd9a4492c&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjTjZXY7eWHAxWAF1kFHf67OQMQsZYEegQIKhAC
 
 [produccionesitaca.es]
 match = -21.4%%
