--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-08 23:47:09
+lastsearch = 2024-08-09 00:30:39
 
 [everon.com.vn]
 match = 14.8%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Ga Everon EPM 22063
 url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
 
 [everon.online]
-match = 17.1%%
-title = Bộ Chăn Ga Everon 3 Triệu - 5 Triệu
-url = https://everon.online/collections/bo-chan-ga-everon-3-trieu-5-trieu
+match = -5.0%%
+title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
+url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
 
 [everonhn.com.vn]
 match = 14.8%%
