--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-08-08 21:42:18
+lastsearch = 2024-08-09 00:35:07
 
 [zhangbrickshop.com]
 match = -133.3
@@ -17,9 +17,9 @@ title = Hướng dẫn đi lại tại sân bay Nội Bài
 url = https://noibaiairport.vn/Transportation-to-and-from-Noibai-International-Airport-nid260.html
 
 [shopvnb.com]
-match = -173.3%%
-title = Top 8 sân cầu lông Gò Vấp chất lượng năm 2024 ...
-url = https://shopvnb.com/danh-sach-cac-san-cau-long-go-vap-nam-2020-cac-long-thu-da-biet-chua-.html
+match = -166.7%%
+title = Danh Sách Các Sân Cầu Lông Ở Bình Thạnh Mới Nhất
+url = https://shopvnb.com/danh-sach-cac-san-cau-long-o-binh-thanh-moi-nhat.html
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -57,9 +57,9 @@ title = Xác định hàm lượng vitamin D2 từ một số loài nấm lớn 
 url = https://vjol.info.vn/index.php/vinhuni/article/download/51293/42137/
 
 [m.facebook.com]
-match = -200.0%%
-title = KTX ĐHQG TP.HCM | ship liên tục Toà B từ 4:30 ,(khu ...
-url = https://m.facebook.com/groups/hoiktxkhub/posts/2411658492547949/
+match = -140.0%%
+title = Học sinh Hà Nội | tìm trẻ lạc ở D2-K4 Khương Hạ
+url = https://m.facebook.com/groups/HocSinhHN/posts/1619274242051764/
 
 [dkv.biz.vn]
 match = -166.7%%
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -26.7%%
-title = Du học Hàn Quốc - ANIDO
-url = https://www.facebook.com/duhochanquoc.anido/posts/tin-vui-cho-du-học-sinh-d2-d10-có-thể-xin-visa-cư-trú-tại-10-tỉnh-thành-của-hq-n/722079063361574/
+match = -106.7%%
+title = Busan Korean Food | Ho Chi Minh City
+url = https://www.facebook.com/Busan.Korean.Food/?locale=vi_VN
 
 [hoc247.vn]
 match = -213.3%%
@@ -182,9 +182,9 @@ title = 2'-deoxyuridine D2
 url = https://www.aptochem.com/p-101-2-deoxyuridine-d2.aspx
 
 [shopee.vn]
-match = -206.7%%
-title = Trống Cajon AB-D2 có tay vặn chỉnh kèm EQ kết nối loa
-url = https://shopee.vn/Trống-Cajon-AB-D2-có-tay-vặn-chỉnh-kèm-EQ-kết-nối-loa-Tặng-bao-và-dây-jack-3m-i.37429989.9030570402
+match = -186.7%%
+title = Trống cajon AB-D2 có tay chỉnh kèm bao dù chống nước
+url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-chỉnh-kèm-bao-dù-chống-nước-Mặt-màu-gỗ-Bảo-hành-1-năm-i.37429989.7833832785
 
 [uspharma.vn]
 match = -20.0%%
@@ -440,4 +440,9 @@ url = https://homefarm.vn/pages/locationhcm
 match = -233.3%%
 title = Handmade D2 thép cố định lưỡi dao Skinner với xương Lạc Đà ...
 url = https://vietnamese.alibaba.com/product-detail/Handmade-D2-Steel-Fixed-Blade-Skinner-11000015145175.html
+
+[zalopay.vn]
+match = -240.0%%
+title = 10 quán buffet Bình Thạnh ngon, chất lượng, giá sinh viên
+url = https://zalopay.vn/buffet-binh-thanh-6065
 
