--- a/images/goi-om-re-to/config.ini
+++ b/images/goi-om-re-to/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-om-re-to.html
 lastopen = 2024-06-10 00:44:39
 
 [search]
-lastsearch = 2024-08-08 23:45:25
+lastsearch = 2024-08-09 00:34:46
 
 [dvan.org]
 match = -41.7%%
@@ -49,7 +49,7 @@ url = https://gaubongquatang.com/danh-muc/goi-men-gia-re-tphcm--170
 [www.lazada.vn]
 match = -50.0%%
 title = Gối ôm Giá Rẻ Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/goi-om-gia-re/?srsltid=AfmBOor4m9EFkVgq5No9mUjqkUltgwEl8Wf-l-An7EpW_8TqXRT5HaFr
+url = https://www.lazada.vn/tag/goi-om-gia-re/
 
 [youngricedrap.com]
 match = -66.7%%
