--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-08 23:41:50
+lastsearch = 2024-08-09 00:29:33
 
 [www.reddit.com]
 match = -82.6%%
@@ -282,9 +282,9 @@ title = Introduction
 url = https://www.degruyter.com/document/doi/10.1515/9780824887964-013/pdf?licenseType=restricted
 
 [en.yna.co.kr]
-match = -113.0%%
-title = Heads of S. Korea's top-10 biz groups received 540.5 bln ...
-url = https://en.yna.co.kr/view/AEN20180218002800320
+match = -117.4%%
+title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
+url = https://en.yna.co.kr/view/AEN20170907001852315
 
 [lol.fandom.com]
 match = 0.0%%
@@ -427,9 +427,9 @@ title = Occasional Paper Pacific-2
 url = https://www.smallarmssurvey.org/sites/default/files/resources/SAS-OP08-Pacific.pdf
 
 [www.amazon.com]
-match = -65.2%%
-title = The Ministry of Utmost Happiness: A novel - Books
-url = https://www.amazon.com/Ministry-Utmost-Happiness-novel/dp/1524733156
+match = -60.9%%
+title = Burn-In: A Novel of the Real Robotic Revolution
+url = https://www.amazon.com/Burn-Novel-Real-Robotic-Revolution/dp/1328637239
 
 [notesplusultra.com]
 match = -21.7%%
